deploy/manifest/012-server-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: jeff-tls
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
