deploy/manifest/022-client-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: jeff-tls
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
