deploy/manifest/023-client-Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: client
  namespace: jeff-tls
spec:
  path: /hello-client
  to:
    kind: Service
    name: client
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
